--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Victor Mutuku
 email: vkiokomutuku@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   
-twitter_username: username
-github_username: username
+#twitter_username: username
+github_username: Victor-Mutuku
 minimal_mistakes_skin: neon
 search: true
 
