--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
-    url: /posts/
+  - title: "Projects"
+    url: /projects/
   - title: "Categories"
     url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Interests"
+    url: /interests/
   - title: "About"
     url: /about/
