--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "Projects"
     url: /projects/
+   - title: "CV"
+    url: /assets/files/Victor-Mutuku-CV.pdf/
   - title: "Publication"
     url: /publication/
   - title: "Interests"
