--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ main:
   - title: "Projects"
     url: /projects/
    - title: "CV"
-    url: /assets/files/Victor-Mutuku-CV.pdf
+    url: /assets/files/VICTOR KIOKO MUTUKU CV.pdf
   - title: "Publication"
     url: /publication/
   - title: "Interests"
