--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
 author:
   name   : "Victor Mutuku"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "I learn, work, and consult"
+  bio    : "I create, design, and I analyze data to uncover insights and drive decisions"
   links:
     #- label: "Website"
       #icon: "fas fa-fw fa-link"
